versions/v2.9/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
= Enabling Experimental Features
:page-languages: [en, zh]
:revdate: 2025-08-18
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/enable-experimental-features/index.adoc 
:product-path: rancher-admin/experimental-features/experimental-features.adoc
ifeval::["{build-type}" != "community"]
:xref-air-gap-rancher-ha: xref:installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
:xref-unsupported-storage-drivers: xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc
:xref-feature-flags: xref:installation-and-upgrade/references/feature-flags.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-air-gap-rancher-ha: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc
:xref-unsupported-storage-drivers: xref:how-to-guides/advanced-user-guides/enable-experimental-features/unsupported-storage-drivers.adoc
:xref-feature-flags: xref:getting-started/installation-and-upgrade/installation-references/feature-flags.adoc
endif::[]

Rancher includes some features that are experimental and disabled by default. You might want to enable these features, for example, if you decide that the benefits of using an {xref-unsupported-storage-drivers}[unsupported storage type] outweighs the risk of using an untested feature. Feature flags were introduced to allow you to try these features that are not enabled by default.

The features can be enabled in three ways:

* <<_enabling_features_when_starting_rancher,Enable features when starting Rancher.>> When installing Rancher with a CLI, you can use a feature flag to enable a feature by default.
* <<_enabling_features_with_the_rancher_ui,Enable features from the Rancher UI>> by going to the *Settings* page.
* <<_enabling_features_with_the_rancher_api,Enable features with the Rancher API>> after installing Rancher.

Each feature has two values:

* A default value, which can be configured with a flag or environment variable from the command line
* A set value, which can be configured with the Rancher API or UI

If no value has been set, Rancher uses the default value.

Because the API sets the actual value and the command line sets the default value, that means that if you enable or disable a feature with the API or UI, it will override any value set with the command line.

For example, if you install Rancher, then set a feature flag to true with the Rancher API, then upgrade Rancher with a command that sets the feature flag to false, the default value will still be false, but the feature will still be enabled because it was set with the Rancher API. If you then deleted the set value (true) with the Rancher API, setting it to NULL, the default value (false) would take effect. See the {xref-feature-flags}[feature flags page] for more information.

== Enabling Features when Starting Rancher

When you install Rancher, enable the feature you want with a feature flag. The command is different depending on whether you are installing Rancher on a single node or if you are doing a Kubernetes Installation of Rancher.

=== Enabling Features for Kubernetes Installs

[NOTE]
====

Values set from the Rancher API will override the value passed in through the command line.
====


When installing Rancher with a Helm chart, use the `--set` option. In the below example, two features are enabled by passing the feature flag names in a comma separated list:

[,shell,subs="attributes+"]
----
helm install rancher {rancher-helm-repo}/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org \
  --set 'extraEnv[0].name=CATTLE_FEATURES'
  --set 'extraEnv[0].value=<FEATURE-FLAG-NAME-1>=true,<FEATURE-FLAG-NAME-2>=true'
----

=== Enabling Features for Air Gap Installs

To perform an {xref-air-gap-rancher-ha}[air gap installation of Rancher], add a Helm chart repository and download a Helm chart, then install Rancher with Helm.

When you install the Helm chart, you should pass in feature flag names in a comma separated list, as in the following example:

----
helm install rancher ./rancher-<VERSION>.tgz \
  --namespace cattle-system 
  --set hostname=<RANCHER.YOURDOMAIN.COM> \
  --set rancherImage=<REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher \
  --set ingress.tls.source=secret \
  --set systemDefaultRegistry=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
  --set useBundledSystemChart=true # Use the packaged Rancher system charts
  --set 'extraEnv[0].name=CATTLE_FEATURES'
  --set 'extraEnv[0].value=<FEATURE-FLAG-NAME-1>=true,<FEATURE-FLAG-NAME-2>=true'
----

ifeval::["{build-type}" == "community"]
=== Enabling Features for Docker Installs

When installing Rancher with Docker, use the `--features` option. In the below example, two features are enabled by passing the feature flag names in a comma separated list:

----
docker run -d -p 80:80 -p 443:443 \
  --restart=unless-stopped \
  rancher/rancher:rancher-latest \
  --features=<FEATURE-FLAG-NAME-1>=true,<FEATURE-FLAG-NAME-2>=true
----
endif::[]

== Enabling Features with the Rancher UI

. In the upper left corner, click *☰ > Global Settings*.
. Click *Feature Flags*.
. To enable a feature, go to the disabled feature you want to enable and click *⋮ > Activate*.

*Result:* The feature is enabled.

=== Disabling Features with the Rancher UI

. In the upper left corner, click *☰ > Global Settings*.
. Click *Feature Flags*. You will see a list of experimental features.
. To disable a feature, go to the enabled feature you want to disable and click *⋮ > Deactivate*.

*Result:* The feature is disabled.

== Enabling Features with the Rancher API

. Go to `<RANCHER-SERVER-URL>/v3/features`.
. In the `data` section, you will see an array containing all of the features that can be turned on with feature flags. The name of the feature is in the `id` field. Click the name of the feature you want to enable.
. In the upper left corner of the screen, under *Operations,* click *Edit*.
. In the *Value* drop-down menu, click *True*.
. Click *Show Request*.
. Click *Send Request*.
. Click *Close*.

*Result:* The feature is enabled.

=== Disabling Features with the Rancher API

. Go to `<RANCHER-SERVER-URL>/v3/features`.
. In the `data` section, you will see an array containing all of the features that can be turned on with feature flags. The name of the feature is in the `id` field. Click the name of the feature you want to enable.
. In the upper left corner of the screen, under *Operations,* click *Edit*.
. In the *Value* drop-down menu, click *False*.
. Click *Show Request*.
. Click *Send Request*.
. Click *Close*.

*Result:* The feature is disabled.
